# zorganpocken-simulation

./: Cargo.toml
src/: generator.rs  main.rs  patient.rs  simulation.rs
