[package]
name = "dsa-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.2"
egui = "0.26.2"
egui_extras = { version = "0.26.2", features = ["image"] }
env_logger = "0.11.2"
rand = "0.8.5"
